--- a/Copy_of_PSU_Day_05_Using_KNN_for_Text_Classification.ipynb
+++ b/Copy_of_PSU_Day_05_Using_KNN_for_Text_Classification.ipynb
@@ -102,7 +102,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wFOZHWV3_ABt",
-        "outputId": "42d0414e-6471-4ab2-f08f-f0609a463bbb"
+        "outputId": "74da6a07-e4ae-49ba-e649-2fed1005a99a"
       },
       "source": [
         "import nltk\n",
@@ -112,7 +112,7 @@
         "nltk.download('wordnet') #words graph based on context\n",
         "nltk.download('omw-1.4')"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -137,7 +137,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -147,9 +147,9 @@
         "id": "Gpgq3SQK5IOr",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 35
+          "height": 34
         },
-        "outputId": "19f5a632-4203-4c75-b0f3-963f8bfedc5d"
+        "outputId": "0c9b60bb-f3dd-4449-f92d-163fc87e1348"
       },
       "source": [
         "import re\n",
@@ -215,7 +215,7 @@
         "            text_result.append(snowball_stemmer.stem(t))\n",
         "        return text_result"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "display_data",
@@ -238,7 +238,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sample_text = \"Troubling\"\n",
+        "sample_text = \"walking\"\n",
         "sample_text_result = cleanText(sample_text, lemmatize=False, stemmer=True)\n",
         "sample_text_result = \" \".join(str(x) for x in sample_text_result)\n",
         "print(\"original: \"+sample_text)\n",
@@ -252,17 +252,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ZuBxfzbuzrs1",
-        "outputId": "c537bfed-0fc7-459e-c399-acc8fc01dc0c"
+        "outputId": "8361679a-82e0-4f9d-d5a1-b110c1436970"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "original: Troubling\n",
-            "Stemming: troubl\n",
-            "Lemmatizing: trouble\n"
+            "original: walking\n",
+            "Stemming: walk\n",
+            "Lemmatizing: walk\n"
           ]
         }
       ]
@@ -313,7 +313,7 @@
         "    bag_of_words_test = vectorizer.transform(clean_test).toarray()\n",
         "    return bag_of_words_train, bag_of_words_test\n"
       ],
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -360,7 +360,7 @@
         "    tfidf_test = vectorizer.transform(clean_test).toarray()\n",
         "    return tfidf_train, tfidf_test"
       ],
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -381,9 +381,9 @@
         "id": "jU6875-NxrHw",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 74
+          "height": 73
         },
-        "outputId": "df18f5c2-91e8-413c-9736-6f65440f7f3e"
+        "outputId": "174ae38e-98c7-41bc-a213-56f6cc84cc54"
       },
       "source": [
         "# Upload the Reviews CSV file that has been shared with you.\n",
@@ -391,7 +391,7 @@
         "from google.colab import files\n",
         "uploaded = files.upload()"
       ],
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "display_data",
@@ -401,9 +401,9 @@
             ],
             "text/html": [
               "\n",
-              "     <input type=\"file\" id=\"files-12cc0cf2-496c-4b07-8446-599abb546d93\" name=\"files[]\" multiple disabled\n",
+              "     <input type=\"file\" id=\"files-6875563d-5bab-49f4-8227-09c71b63ab68\" name=\"files[]\" multiple disabled\n",
               "        style=\"border:none\" />\n",
-              "     <output id=\"result-12cc0cf2-496c-4b07-8446-599abb546d93\">\n",
+              "     <output id=\"result-6875563d-5bab-49f4-8227-09c71b63ab68\">\n",
               "      Upload widget is only available when the cell has been executed in the\n",
               "      current browser session. Please rerun this cell to enable.\n",
               "      </output>\n",
@@ -591,7 +591,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Saving reviews.csv to reviews.csv\n"
+            "Saving Day 05_Using KNN for Text Classification.zip to Day 05_Using KNN for Text Classification.zip\n"
           ]
         }
       ]
@@ -607,11 +607,11 @@
         "id": "HILJMpa_y26e",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 423
         },
-        "outputId": "c562f779-4977-4fe3-c661-80029ee2f38b"
+        "outputId": "7f5c152d-5cad-43cb-c7ac-6496bab86c06"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -634,7 +634,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-89639ad1-0e38-4910-ad8c-6d6c58457abe\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-54c19a5c-3435-424a-bd82-623641c325b5\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -720,7 +720,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-89639ad1-0e38-4910-ad8c-6d6c58457abe')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-54c19a5c-3435-424a-bd82-623641c325b5')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -772,12 +772,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-89639ad1-0e38-4910-ad8c-6d6c58457abe button.colab-df-convert');\n",
+              "        document.querySelector('#df-54c19a5c-3435-424a-bd82-623641c325b5 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-89639ad1-0e38-4910-ad8c-6d6c58457abe');\n",
+              "        const element = document.querySelector('#df-54c19a5c-3435-424a-bd82-623641c325b5');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -797,8 +797,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-9c9c5ffd-83a3-41c1-bbd9-970eec60cb24\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-9c9c5ffd-83a3-41c1-bbd9-970eec60cb24')\"\n",
+              "<div id=\"df-4592e36b-2273-467c-be1e-60ce54f55bde\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-4592e36b-2273-467c-be1e-60ce54f55bde')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -917,7 +917,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-9c9c5ffd-83a3-41c1-bbd9-970eec60cb24 button');\n",
+              "        document.querySelector('#df-4592e36b-2273-467c-be1e-60ce54f55bde button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -939,7 +939,7 @@
       "metadata": {
         "id": "WXD0iAR5k62v"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -950,7 +950,7 @@
       "metadata": {
         "id": "7j9rNGkQpn7y"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -1018,7 +1018,7 @@
         "    print(scores)\n",
         "    return predicted, y_test"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -1037,13 +1037,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "cc64f63c-0f92-49f0-dc83-f08713238171"
+        "outputId": "9d46f202-707e-4ff3-f0c3-a759e9bc4378"
       },
       "source": [
         "## KNN accuracy after using BoW\n",
         "predicted, y_test = bow_knn()"
       ],
-      "execution_count": null,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -1079,13 +1079,13 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "e5ad6d74-8c5a-4996-fdcf-e1861e901da3"
+        "outputId": "5c54b938-8def-4525-93d4-0aaccd4b8961"
       },
       "source": [
         "## KNN accuracy after using TFIDF\n",
         "predicted, y_test = tfidf_knn()"
       ],
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1348,17 +1348,17 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 424
+          "height": 423
         },
         "id": "qRiS7dT7piTE",
-        "outputId": "016014b6-3399-4a42-9182-f555ff8f95af"
+        "outputId": "62fa890c-51ac-4a7a-a2cb-0af23c24e482"
       },
       "source": [
         "import pandas as pd\n",
         "df = pd.read_csv('spam.csv', on_bad_lines='skip')\n",
         "df"
       ],
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1381,7 +1381,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3d49099d-b36f-4d7e-bf04-3ee873b3289a\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ab2b10ff-cbca-42ab-8d02-727e0d410cff\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1467,7 +1467,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3d49099d-b36f-4d7e-bf04-3ee873b3289a')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ab2b10ff-cbca-42ab-8d02-727e0d410cff')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1519,12 +1519,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3d49099d-b36f-4d7e-bf04-3ee873b3289a button.colab-df-convert');\n",
+              "        document.querySelector('#df-ab2b10ff-cbca-42ab-8d02-727e0d410cff button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3d49099d-b36f-4d7e-bf04-3ee873b3289a');\n",
+              "        const element = document.querySelector('#df-ab2b10ff-cbca-42ab-8d02-727e0d410cff');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1544,8 +1544,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-7ea57ed6-1f89-4bf5-9218-c40aaf13421f\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-7ea57ed6-1f89-4bf5-9218-c40aaf13421f')\"\n",
+              "<div id=\"df-d9103e0c-c504-40b1-9158-bc89087501df\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-d9103e0c-c504-40b1-9158-bc89087501df')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1664,7 +1664,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-7ea57ed6-1f89-4bf5-9218-c40aaf13421f button');\n",
+              "        document.querySelector('#df-d9103e0c-c504-40b1-9158-bc89087501df button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1675,7 +1675,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 18
+          "execution_count": 16
         }
       ]
     },
@@ -1687,7 +1687,7 @@
       "source": [
         "df['Category'] = df['Category'].map({'ham': 0, 'spam': 1})"
       ],
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": []
     },
     {
@@ -1698,12 +1698,12 @@
           "height": 206
         },
         "id": "KiEHuMypWyb6",
-        "outputId": "c0988850-7ef4-4531-dffb-77ac8256c59d"
+        "outputId": "d5c54430-2f0f-43e1-d49c-606b067b221b"
       },
       "source": [
         "df.head(5)"
       ],
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1718,7 +1718,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-3d4b6e9f-3596-49b3-8693-e48c143dc025\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-db6e281d-823c-4237-92c9-379d8a561294\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -1773,7 +1773,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-3d4b6e9f-3596-49b3-8693-e48c143dc025')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-db6e281d-823c-4237-92c9-379d8a561294')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1825,12 +1825,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-3d4b6e9f-3596-49b3-8693-e48c143dc025 button.colab-df-convert');\n",
+              "        document.querySelector('#df-db6e281d-823c-4237-92c9-379d8a561294 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-3d4b6e9f-3596-49b3-8693-e48c143dc025');\n",
+              "        const element = document.querySelector('#df-db6e281d-823c-4237-92c9-379d8a561294');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -1850,8 +1850,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "<div id=\"df-dc874c0b-b3b2-41cc-b20e-b601ea296d3e\">\n",
-              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-dc874c0b-b3b2-41cc-b20e-b601ea296d3e')\"\n",
+              "<div id=\"df-cf0de137-1b5f-4411-adac-7287506a4e9d\">\n",
+              "  <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-cf0de137-1b5f-4411-adac-7287506a4e9d')\"\n",
               "            title=\"Suggest charts.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -1970,7 +1970,7 @@
               "    }\n",
               "    (() => {\n",
               "      let quickchartButtonEl =\n",
-              "        document.querySelector('#df-dc874c0b-b3b2-41cc-b20e-b601ea296d3e button');\n",
+              "        document.querySelector('#df-cf0de137-1b5f-4411-adac-7287506a4e9d button');\n",
               "      quickchartButtonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "    })();\n",
@@ -1981,7 +1981,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 20
+          "execution_count": 18
         }
       ]
     },
@@ -1995,9 +1995,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "WRJU9rFy1XQR",
-        "outputId": "6e3be2d1-129a-49ef-8fa0-972c4d922c83"
+        "outputId": "8e76b7a6-093e-4bb5-f6b6-063c97b435ba"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2062,7 +2062,7 @@
         "    print(scores)\n",
         "    return predicted, y_test"
       ],
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -2072,13 +2072,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "W8PwydHYs1h_",
-        "outputId": "ec5dbf6b-e8ed-41f4-b190-cb6249b86f54"
+        "outputId": "01cda3bf-4923-49b0-88ac-3d58cd586a1c"
       },
       "source": [
         "# This cell may take some time to run\n",
         "predicted, y_test = bow_knn()"
       ],
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -2104,9 +2104,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zf8i2P1nxpl8",
-        "outputId": "93bc99c4-ba15-4502-80b0-9d0b327a643c"
+        "outputId": "cb7bb7ef-ff5b-4ad6-9e9d-292d8eddfbe0"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
