--- a/Speech_AIML.ipynb
+++ b/Speech_AIML.ipynb
@@ -371,7 +371,7 @@
       "metadata": {
         "id": "gEE644P01AVS"
       },
-      "execution_count": 10,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -384,11 +384,11 @@
         "id": "chCAdGHv0H69",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 356
+          "height": 339
         },
-        "outputId": "7e43c9a0-b777-435c-e7b7-0fd54ee646b3"
+        "outputId": "1bf6e267-a618-481b-98da-86d8db754197"
       },
-      "execution_count": 11,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "error",
@@ -397,7 +397,7 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mMessageError\u001b[0m                              Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-11-4996ee3d8d09>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdrive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdrive\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/gdrive'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;32m<ipython-input-13-4996ee3d8d09>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mgoogle\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolab\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdrive\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mdrive\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'/content/gdrive'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/google/colab/drive.py\u001b[0m in \u001b[0;36mmount\u001b[0;34m(mountpoint, force_remount, timeout_ms, readonly)\u001b[0m\n\u001b[1;32m    101\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mmount\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmountpoint\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mforce_remount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout_ms\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m120000\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreadonly\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mFalse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    102\u001b[0m   \u001b[0;34m\"\"\"Mount your Google Drive at the specified mountpoint path.\"\"\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 103\u001b[0;31m   return _mount(\n\u001b[0m\u001b[1;32m    104\u001b[0m       \u001b[0mmountpoint\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    105\u001b[0m       \u001b[0mforce_remount\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mforce_remount\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/google/colab/drive.py\u001b[0m in \u001b[0;36m_mount\u001b[0;34m(mountpoint, force_remount, timeout_ms, ephemeral, readonly)\u001b[0m\n\u001b[1;32m    130\u001b[0m   )\n\u001b[1;32m    131\u001b[0m   \u001b[0;32mif\u001b[0m \u001b[0mephemeral\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 132\u001b[0;31m     _message.blocking_request(\n\u001b[0m\u001b[1;32m    133\u001b[0m         \u001b[0;34m'request_auth'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrequest\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m{\u001b[0m\u001b[0;34m'authType'\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m'dfs_ephemeral'\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout_sec\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    134\u001b[0m     )\n",
             "\u001b[0;32m/usr/local/lib/python3.10/dist-packages/google/colab/_message.py\u001b[0m in \u001b[0;36mblocking_request\u001b[0;34m(request_type, request, timeout_sec, parent)\u001b[0m\n\u001b[1;32m    174\u001b[0m       \u001b[0mrequest_type\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrequest\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mparent\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexpect_reply\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    175\u001b[0m   )\n\u001b[0;32m--> 176\u001b[0;31m   \u001b[0;32mreturn\u001b[0m \u001b[0mread_reply_from_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrequest_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtimeout_sec\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
@@ -415,10 +415,22 @@
         "DATA_DIR = \"/content/Speaker_Recognition_Data\""
       ],
       "metadata": {
-        "id": "FsD5R2NQ08Yq"
+        "id": "FsD5R2NQ08Yq",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "f428fd7b-32e0-48bb-ae05-076259ab8df9"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "unzip:  cannot find or open /content/gdrive/MyDrive/Lab/SR_data.zip, /content/gdrive/MyDrive/Lab/SR_data.zip.zip or /content/gdrive/MyDrive/Lab/SR_data.zip.ZIP.\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -472,7 +484,7 @@
       "metadata": {
         "id": "ClXupfWq1I1i"
       },
-      "execution_count": null,
+      "execution_count": 15,
       "outputs": []
     },
     {
@@ -539,7 +551,7 @@
       "metadata": {
         "id": "tkfy_va31Js0"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -548,10 +560,22 @@
         "! rm -r {DATA_DIR}"
       ],
       "metadata": {
-        "id": "WosDN1Bt66p4"
+        "id": "WosDN1Bt66p4",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "6ee7bb9f-8d19-49fd-c865-960ab7377c96"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "rm: cannot remove '/content/Speaker_Recognition_Data': No such file or directory\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -565,7 +589,7 @@
       "metadata": {
         "id": "BoiCyAzC1Lu0"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -578,24 +602,14 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "6c876392-eedf-4afa-b6bd-775ce44116ea"
+        "outputId": "fff87830-a736-449f-d788-bf5f7b4a62f0"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "fdfb0\n",
-            "fjlr0\n",
-            "fjlg0\n",
-            "feme0\n",
-            "fdjh0\n",
-            "fgcs0\n",
-            "fcmg0\n",
-            "fcke0\n",
-            "falk0\n",
-            "fgrw0\n",
             "Training Completed\n"
           ]
         }
@@ -607,51 +621,10 @@
         "tt, conf_mat, tot_spek = testing(test_data, feat_test, trained_model)"
       ],
       "metadata": {
-        "id": "NDJvV43W1SKJ",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "18728042-c3ee-4d26-a0d4-6336e9b807bb"
+        "id": "NDJvV43W1SKJ"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "fdfb0\n",
-            "fdfb0 -> fcmg0 N\n",
-            "fdfb0 -> fdfb0 Y\n",
-            "fjlr0\n",
-            "fjlr0 -> fjlr0 Y\n",
-            "fjlr0 -> fjlr0 Y\n",
-            "fjlg0\n",
-            "fjlg0 -> fjlg0 Y\n",
-            "fjlg0 -> fjlg0 Y\n",
-            "feme0\n",
-            "feme0 -> feme0 Y\n",
-            "feme0 -> feme0 Y\n",
-            "fdjh0\n",
-            "fdjh0 -> falk0 N\n",
-            "fdjh0 -> falk0 N\n",
-            "fgcs0\n",
-            "fgcs0 -> feme0 N\n",
-            "fgcs0 -> fgcs0 Y\n",
-            "fcmg0\n",
-            "fcmg0 -> fcmg0 Y\n",
-            "fcmg0 -> fcmg0 Y\n",
-            "fcke0\n",
-            "fcke0 -> fcke0 Y\n",
-            "fcke0 -> fcke0 Y\n",
-            "falk0\n",
-            "falk0 -> falk0 Y\n",
-            "falk0 -> falk0 Y\n",
-            "fgrw0\n",
-            "fgrw0 -> fgrw0 Y\n",
-            "fgrw0 -> fgrw0 Y\n"
-          ]
-        }
-      ]
+      "execution_count": 20,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -663,29 +636,31 @@
       "metadata": {
         "id": "Ci0k_geG1U2e",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 280
         },
-        "outputId": "becb5cf4-45c1-4dde-a334-f269d87df106"
+        "outputId": "695265b0-03e1-48a2-d173-671ab5bcdc36"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'fdfb0': 2, 'fjlr0': 2, 'fjlg0': 2, 'feme0': 2, 'fdjh0': 2, 'fgcs0': 2, 'fcmg0': 2, 'fcke0': 2, 'falk0': 2, 'fgrw0': 2}\n",
+            "{}\n",
             "Confusion Matrix:\n",
-            " [[1. 0. 0. 0. 0. 0. 1. 0. 0. 0.]\n",
-            " [0. 2. 0. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 2. 0. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 2. 0. 0. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0. 2. 0.]\n",
-            " [0. 0. 0. 1. 0. 1. 0. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 2. 0. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 2. 0. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0. 2. 0.]\n",
-            " [0. 0. 0. 0. 0. 0. 0. 0. 0. 2.]]\n",
-            "Accuracy:  80.0\n"
+            " []\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ZeroDivisionError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-21-3ab2abfee81c>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtt\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Confusion Matrix:\\n\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mconf_mat\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Accuracy: \"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m \u001b[0mconf_mat\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mj\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0mj\u001b[0m  \u001b[0;32melse\u001b[0m \u001b[0;36m0\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtot_spek\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mj\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtot_spek\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m]\u001b[0m \u001b[0;34m)\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0mfloat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msum\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mZeroDivisionError\u001b[0m: float division by zero"
           ]
         }
       ]
