--- a/Speech_AIML.ipynb
+++ b/Speech_AIML.ipynb
@@ -321,7 +321,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Speaker Recognition using GMM:\n"
+        "## Speaker Recognition using GMM (guassian mixture model):\n"
       ],
       "metadata": {
         "id": "TkWfFcOb0prK"
@@ -668,7 +668,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "## Speaker Recognition using DNN"
+        "## Speaker Recognition using DNN (Deep Neural Network)"
       ],
       "metadata": {
         "id": "a2EssJUh1Wjy"
